<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Background">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/button_go_back"
        android:src="@drawable/baseline_arrow_back"
        android:paddingTop="9dp"
        android:paddingStart="6dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        />

    <TextView
        android:id="@+id/createEventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Event"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/MainTextTitle"
        android:padding="20dp"
        android:textAlignment="center"/>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:backgroundTint="#111834">

            <ImageView
                android:id="@+id/posterImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:padding="10dp"/>

        </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/editPosterImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            app:backgroundTint="#3D5AF1"
            android:text="ADD/EDIT POSTER"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="500">
    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputStyle"
            android:id="@+id/eventNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name" />

    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventDescriptionEditText"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minLines="6"
                android:gravity="top|start"
                android:hint="Description" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ElementBackground">

            <Button
                android:id="@+id/startTimeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Start Time"
                android:gravity="start"
                android:textStyle="normal"
                android:paddingStart="16dp"
                android:backgroundTint="#102341"
                android:textColor="@color/White"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ElementBackground">

            <Button
            android:id="@+id/endTimeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="End Time"
            android:paddingStart="16dp"
            android:backgroundTint="#102341"
            android:textColor="@color/White"
            android:textStyle="normal"
            android:gravity="start" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputStyle"
            android:id="@+id/eventLocationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/attendeeCapacityEditText"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Attendee Capacity" />

    </com.google.android.material.textfield.TextInputLayout>
        <CheckBox android:id="@+id/checkboxGeneratePromoQRCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generate Promo QR Code"
            android:textColor="@color/BodyText"/>

    </LinearLayout>

    <Button
        android:id="@+id/continueCreateEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continue"
        app:backgroundTint="#3D5AF1"
        android:textColor="@color/White"
        android:layout_gravity="center"
        android:textSize="16sp"
        />

</LinearLayout>
</ScrollView>