...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/generateCheckinQRCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:backgroundTint="#3D5AF1"
            android:text="Generate QR Code"
            android:layout_marginRight="40dp"
...
            app:backgroundTint="#3D5AF1"
            android:text="Reuse QR Code"
            />

        </LinearLayout>
    <Button
        android:id="@+id/confirmEventCreationButton"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        app:backgroundTint="#3D5AF1"
        android:text="Confirm"
...
