...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_back_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BACK"
            app:backgroundTint="#3D5AF1"
            android:textColor="@android:color/white"
            android:autofillHints="Events"
...
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CREATE EVENT"
            app:backgroundTint="#3D5AF1"
            android:textColor="@android:color/white"
            android:autofillHints="check in"
...
