...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_organize_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ORGANIZE EVENTS"
            app:backgroundTint="#3D5AF1"
            android:textColor="@android:color/white"
            android:autofillHints="Events"
...
