<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/Background">

        <TextView
            android:id="@+id/createProfileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ADD PROFILE"
            android:textSize="25sp"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:padding="20dp"
            android:textAlignment="center"/>
        <!-- CardView for circular profile view -->
        <androidx.cardview.widget.CardView
            android:layout_width="155dp"
            android:layout_height="155dp"
            app:cardCornerRadius="250dp"
            app:cardBackgroundColor="@color/White"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center"
                android:backgroundTint="#111834">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:padding="10dp"
                    />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>
        <!--
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/profile_bg"
            android:layout_gravity="center"
            android:contentDescription="@string/profileimage"
            android:padding="20dp" />
            -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editProfileImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@android:color/white"
                app:backgroundTint="#3D5AF1"
                android:text="@string/add_picture" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:weightSum="100">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:hint="Name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPhoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:hint="@string/phone"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:hint="@string/email"
                    android:inputType = "textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userHomepageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:hint="@string/u" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/continueAddProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:backgroundTint="#3D5AF1"
            android:text="@string/confirm"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>